--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>树懒先生的博客</title>
     <style type="text/css">
         h1{
             text-align: center;
@@ -11,6 +11,6 @@
     </style>
 </head>
 <body>
-    <h1>Hello Github</h1>   
+    <h1>Hello World</h1>   
 </body>
 </html>
