--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ comments: false
         <div class="column one-third">
             {% include sidebar-search.html %}
             {% include sidebar-categories-cloud.html %}
-            {% include sidebar-ad.html %}
-            {% include sidebar-popular-repo.html %}
+            <!-- {% include sidebar-ad.html %} --!>
+             <!-- {% include sidebar-popular-repo.html %} --!>
             <h1>测试</h1>
         </div>
     </div>
