--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ comments: false
 <section class="banner">
     <div class="collection-head">
       <div class="container">
-        <div class="columns">
+        <!-- <div class="columns">
           <div class="column two-thirds">
             <div class="collection-title">
               <h1 class="collection-header" id="sub-title"><span>{{ site.subtitle }}</span></h1>
@@ -39,7 +39,7 @@ comments: false
               {% include sidebar-qrcode.html %}
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 </section>
