--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ comments: false
 {% if site.cdn.jsdelivr.enabled %}
 {% assign assets_base_url = "https://cdn.jsdelivr.net/gh/" | append: site.repository %}
 {% endif %}
-<section class="banner">
+<!-- <section class="banner">
     <div class="collection-head">
       <div class="container">
-        <!-- <div class="columns">
+        <div class="columns">
           <div class="column two-thirds">
             <div class="collection-title">
               <h1 class="collection-header" id="sub-title"><span>{{ site.subtitle }}</span></h1>
@@ -39,10 +39,10 @@ comments: false
               {% include sidebar-qrcode.html %}
             </div>
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
-</section>
+</section> -->
 <!-- /.banner -->
 <section class="container content">
     <div class="columns">
