--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@ comments: false
         <div class="column one-third">
             {% include sidebar-search.html %}
             {% include sidebar-categories-cloud.html %}
+            {% include test.html %}
             <!-- {% include sidebar-ad.html %} -->
              <!-- {% include sidebar-popular-repo.html %} -->
         </div>
     </div>
-    <div class="pagination text-align">
+    <div class="pagination text-center">
       <div class="btn-group">
         {% if paginator.previous_page %}
           {% if paginator.previous_page == 1 %}
