--- a/index.html
+++ b/index.html
@@ -102,10 +102,8 @@ comments: false
         <div class="column one-third">
             {% include sidebar-search.html %}
             {% include sidebar-categories-cloud.html %}
-            aaa
-            {% include test.html %}
             <!-- {% include sidebar-ad.html %} -->
-             <!-- {% include sidebar-popular-repo.html %} -->
+             {% include sidebar-popular-repo.html %}
         </div>
     </div>
     <div class="pagination text-center">
