--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 class: home
 css: ['pages/index.css']
 comments: false
+title: {% site.title %}
+description: {% site.description %}
 ---
 
 {% assign assets_base_url = site.url %}
