--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 class: home
 css: ['pages/index.css']
 comments: false
-title: {% site.title %}
-description: {% site.description %}
+title: "奔跑的树懒先生"
+description: "树懒先生的博客"
 ---
 
 {% assign assets_base_url = site.url %}
